<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/sample"
        android:layout_centerHorizontal="true"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="false"
                app:contentPadding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:text="@string/corner_radius"/>
                    <com.google.android.material.slider.Slider
                        android:id="@+id/cornerSlider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:valueFrom="0.0"
                        android:valueTo="75.0"
                        android:value="0.0" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="false"
                app:contentPadding="10dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:text="@string/corners"/>
                    <RadioGroup
                        android:id="@+id/cornerGroup"
                        android:checkedButton="@+id/all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/all"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/all"/>
                        <RadioButton
                            android:id="@+id/topRight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/top_right"/>
                        <RadioButton
                            android:id="@+id/topLeft"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/top_left"/>
                        <RadioButton
                            android:id="@+id/bottomRight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/bottom_right"/>
                        <RadioButton
                            android:id="@+id/bottomLeft"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/bottom_left"/>
                    </RadioGroup>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="false"
                app:contentPadding="10dp"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:text="@string/corner_family"/>
                    <RadioGroup
                        android:id="@+id/cornerFamilyGroup"
                        android:checkedButton="@+id/round"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/round"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/round"/>
                        <RadioButton
                            android:id="@+id/cut"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/cut"/>

                    </RadioGroup>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>